# erwinia_os

./: README.md
erwinia_os_bringup/: CMakeLists.txt  README.md  package.xml
erwinia_os_bringup/launch/: bringup.launch.py
erwinia_os_control/: CMakeLists.txt  README.md  package.xml
erwinia_os_control/config/:  controllers.yaml
erwinia_os_control/erwinia_os_control/: generate_controllers_yaml.py
erwinia_os_control/launch/: ros2_control.launch.py
erwinia_os_description/: CMakeLists.txt  README.md  package.xml
erwinia_os_description/launch/: description.launch.py
erwinia_os_description/meshes/: base_link_collision.STL  frame_collision.STL  lidar.STL  wheel.STL  wheel_collision.STL
erwinia_os_description/rviz/: view.rviz
erwinia_os_description/urdf/: erwinia_os.urdf.xacro
erwinia_os_description/urdf/amiga/: amiga_macro.urdf.xacro  amiga_ros2_control.xacro  amiga_wheel_macro.urdf.xacro
erwinia_os_description/urdf/sensors/: amiga_camera_macro.urdf.xacro  amiga_lidar_macro.urdf.xacro
erwinia_os_gz/: CMakeLists.txt  README.md  package.xml
erwinia_os_gz/launch/: gazebo.launch.py
erwinia_os_gz/models/apple_tree_crook_canker/: model.config  model.sdf
erwinia_os_gz/worlds/: empty.sdf  fb_tree.sdf
