<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>erwinia_os_gz</name>
  <version>0.0.0</version>
  <description>Gazebo worlds, models, and launch files for the Erwinia platform.</description>
  <maintainer email="hayden4feddock@gmail.com">hayden</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>ros2_controllers</build_depend>
  <build_depend>joint_state_broadcaster</build_depend>
  <build_depend>joint_trajectory_controller</build_depend>

  <depend>rclcpp</depend>
  <depend>ros2_control</depend>
  <depend>controller_manager_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
